# Python_practicas

./: .gitignore
labs/Proyecto_Python/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
labs/Proyecto_Python/config/kafka/: server.properties
labs/Proyecto_Python/data/seed/: invoices.csv
labs/Proyecto_Python/data/staging/: customers_staging.csv  order_items_staging.csv  orders_staging.csv  products_staging.csv
labs/Proyecto_Python/distrito_chilaquil_logo_kit/: README.md
labs/Proyecto_Python/docs/: Documento_Tecnico_Distrito_Chilaquil.docx  Manual_Operacion_Distrito_Chilaquil_Alta_Productos.docx  manual_operacion_ui.txt  resumen_procesos_sencillo.md  security_evidence.md  ui_windows.md
labs/Proyecto_Python/docs/mermaid diagramas/: arquitectura_hexagonal.mmd  der_etl.mmd  despliegue_local.mmd  erd.mmd  secuencia_create_order.mmd
labs/Proyecto_Python/domain/: __init__.py
labs/Proyecto_Python/domain/customers/: __init__.py  entities.py
labs/Proyecto_Python/domain/orders/: __init__.py  entities.py  exceptions.py  value_objects.py
labs/Proyecto_Python/domain/products/: __init__.py  entities.py
labs/Proyecto_Python/migrations/: env.py  script.py.mako
labs/Proyecto_Python/migrations/versions/: 20260302_0001_initial_schema.py
labs/Proyecto_Python/src/: __init__.py
labs/Proyecto_Python/src/application/: __init__.py  errors.py  ports.py
labs/Proyecto_Python/src/application/customers/: __init__.py  dto.py  use_cases.py
labs/Proyecto_Python/src/application/orders/: __init__.py  dto.py  use_cases.py
labs/Proyecto_Python/src/application/products/: __init__.py  dto.py  use_cases.py
labs/Proyecto_Python/src/etl/: __init__.py  extract.py  generate_seed.py  load.py  pipeline.py  transform.py
labs/Proyecto_Python/src/infrastructure/: __init__.py  settings.py
labs/Proyecto_Python/src/infrastructure/api/: __init__.py  dependencies.py  errors.py  main.py  observability.py
labs/Proyecto_Python/src/infrastructure/common/: __init__.py  async_runner.py
labs/Proyecto_Python/src/infrastructure/db/: __init__.py  base.py  mappers.py  models.py  repositories.py  seed_from_csv.py  session.py  (+1 more)
labs/Proyecto_Python/ui/: app.js  index.html  styles.css
labs/lab-entorno-herramientas/mi_proyecto/: .pre-commit-config.yaml  README.md  bad_style.py  pyproject.toml
(+99 files in other folders)
