[project]
name = "mi-proyecto"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorge Ramirez",email = "jhonasito@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "mi_proyecto", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

